--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
             
             <div class="col-lg-6 my-0 text-center projects">
               <h1 class="display-5-bold lh-1 mb-3">My Projects</h1>
-              <p class="name_link">You can look at few of my project here.</p>
+              <p class="name_link">You can look at few of my project.</p>
+              <p class="name_link">
+                <ul>
+                  <li><a href="https://github.com/samyakbaid/travel-tracker">travel tracker</a></li>
+                  <li><a href="https://github.com/samyakbaid/dictionary">dictionary</a></li>
+                  <li><a href="https://github.com/samyakbaid/drum">drum</a></li>
+                  <li><a href="https://github.com/samyakbaid/simon-game">simon-game</a></li>
+                  <li><a href="https://github.com/samyakbaid/dice-game">dice-game</a></li>
+                  <li><a href="https://github.com/samyakbaid/blog-website"> blog-website</a></li>
+
+
+
+                </ul>
+              </p>
             </div>
             
           </div>
